welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur()){x = true}
  ^SnakeBuggle:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(x)
  ^